# DLPSlicer

./: .gitignore  CMakeLists.txt  README.md  config.h  config.h.in
DLPSlicerSetup/: DLPSlicerSetup.vdproj
QFTP_test/: QFTP_test.cpp  QFTP_test.h  QFTP_test.qrc  QFTP_test.ui  QFTP_test.vcxproj  QFTP_test.vcxproj.filters  main.cpp
QFTP_test/Debug/qmake/: qtvars_Win32_Debug.props
QFTP_test/Release/qmake/: qtvars_Win32_Release.props
resources/: AppSet.xml
resources/dlprinter/: S250.ini  S288.ini
resources/model/: ball.stl  ball1.stl  cone.stl  cube.stl  ring.stl
resources/qrc/: Resource.qrc  base.qss
src/: CMakeLists.txt
src/Clipper/: CMakeLists.txt  clipper.hpp
src/DLPSlicer/: CMakeLists.txt  CenterTopWidget.cpp  CenterTopWidget.h  DLPSlicer.aps  DLPSlicer.rc  DLPrint.cpp  DLPrint.h  DLPrinter.cpp  DLPrinter.h  Gadget.h  Interface.cpp  Interface.h  PreviewDialog.cpp  PreviewDialog.h  PreviewWidget.cpp  PreviewWidget.h  Setting.cpp  Setting.h  SetupDialog.cpp  SetupDialog.h  Support.cpp  Support.h  TreeSupport.cpp  TreeSupport.h  commands.cpp  commands.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.h  tool.h
src/DLPSlicer/libslic3r/: BoundingBox.cpp  BoundingBox.hpp  ClipperUtils.cpp  ClipperUtils.hpp  ExPolygon.cpp  ExPolygon.hpp  ExPolygonCollection.cpp  ExPolygonCollection.hpp  Geometry.cpp  Geometry.hpp  IO.cpp  IO.hpp  Line.cpp  Line.hpp  Model.cpp  Model.hpp  MultiPoint.cpp  MultiPoint.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Polyline.cpp  Polyline.hpp  PolylineCollection.cpp  PolylineCollection.hpp  SlicingAdaptive.cpp  SlicingAdaptive.hpp  Surface.cpp  SurfaceCollection.cpp  SurfaceCollection.hpp  Thread.hpp  TriangleMesh.cpp  TriangleMesh.hpp  libslic3r.h
src/DLPSlicer/slic3r_src/: xsinit.h
src/DLPSlicer/slic3r_src/libslic3r/: BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  ClipperUtils.cpp  ClipperUtils.hpp  Config.cpp  Config.hpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.cpp  ExtrusionEntityCollection.cpp  ExtrusionEntityCollection.hpp  Flow.cpp  Flow.hpp  GCode.cpp  GCode.hpp  GCodeReader.cpp  GCodeReader.hpp  GCodeSender.cpp  GCodeSender.hpp  GCodeTimeEstimator.cpp  GCodeTimeEstimator.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  IO.cpp  LayerHeightSpline.cpp  LayerHeightSpline.hpp  LayerRegion.cpp  LayerRegionFill.cpp  Model.cpp  Model.hpp  MotionPlanner.cpp  MotionPlanner.hpp  MultiPoint.cpp  MultiPoint.hpp  PlaceholderParser.cpp  PlaceholderParser.hpp  Point.cpp  Point.hpp  (+18 more)
src/DLPSlicer/slic3r_src/libslic3r/Fill/: Fill.cpp  Fill.hpp  FillHoneycomb.hpp  FillPlanePath.cpp
src/DLPSlicer/slic3r_src/libslic3r/IO/: TMF.cpp  TMF.hpp
src/IConfig/: CMakeLists.txt
src/IConfig/XmlConfig/: .gitignore  ANSIColors.h  IConfig.h  IObject.h  Logger.cpp  Logger.h  LoggerConfig.h  RapidXmlWrapper.h  SConstruct  Utils.cpp  Utils.h  XmlConfig.cpp  XmlConfig.h  XmlString.cpp  XmlString.h  color_SConscript  loguru.h  this.sh  unistd.h  unit.cpp
src/IConfig/XmlConfig/tests/: DecayChannels.xml  Particles.xml  main.xml
src/admesh/: CMakeLists.txt  connect.c  portable_endian.h  shared.c  stl.h  stl_io.c  stlinit.c  util.c
src/poly2tri/: CMakeLists.txt
src/polypartition/: CMakeLists.txt  polypartition.cpp
