#…Ë÷√ ‰≥ˆ¬∑æ∂
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE  ${CMAKE_CURRENT_BINARY_DIR}/../release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${CMAKE_CURRENT_BINARY_DIR}/../debug) 

FILE(GLOB SRC_FILES "./XmlConfig/*.cpp")
FILE(GLOB HEAD_FILES "./XmlConfig/*.h")

add_library(IConfig STATIC ${SRC_FILES} ${HEAD_FILES})
